# consulta-ips

./: README.md  consulta.py  input.csv  pyproject.toml  start.bat  test.py
